corrected chat body cutting off on top and bottom, added fonts, added delete icon

--- a/sassy.scss
+++ b/sassy.scss
@@ -67,12 +67,13 @@ header{
   margin: 0;
 }
 .midSection{
-  padding-top:20px;
+  padding-top:80px;
 }
 footer {
   position: fixed;
   bottom: 0;
   width: 100%;
+
 
   // border: 2px solid black;
 
@@ -85,6 +86,7 @@ footer {
   padding: 0;
   .talk{
     background-color: white;
+    padding-top: 20px;
   }
   .col-md-4 {
     margin-left: 25px;
